--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="recruitment_web">
+  <meta name="apple-mobile-web-app-title" content="pinkin_flutter_web_admin_dashboard">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
 
-  <title>recruitment_web</title>
+  <title>NextGenerator AI</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "3640451791";
+    var serviceWorkerVersion = "4292813844";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer=""></script>
@@ -44,7 +44,7 @@
     body {
       margin: 0;
       min-height: 100%;
-      background-color: #FFFFFF;
+      background-color: #2C3E50;
           background-size: 100% 100%;
     }
 
@@ -59,18 +59,18 @@
 
     .contain {
       display:block;
-      width:50%; height:50%;
+      width:100%; height:100%;
       object-fit: contain;
     }
 
     .stretch {
       display:block;
-      width:50%; height:50%;
+      width:100%; height:100%;
     }
 
     .cover {
       display:block;
-      width:50%; height:50%;
+      width:100%; height:100%;
       object-fit: cover;
     }
 
